--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,19 +1,27 @@
-<%= form_for(task) do |f| %>
- <% if task.errors.any? %>
-    <div id="error_explanation">
-      <ul>
-        <% task.errors.full_messages.each do |task| %>
-          <li><%= task %></li>
+<div class="row">
+  <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
+   <%= form_for(task) do |f| %>
+   <% if task.errors.any? %>
+ 　  <div class="alert alert-warning">
+       <ul>
+         <% task.errors.full_messages.each do |task| %>
+           <li><%= task %></li>
         <% end %>
-      </ul>
-    </div>
-  <% end %>
+       </ul>
+     </div>
+   <% end %>
   
-  <%= f.label :status, 'ステータス' %>
-  <%= f.text_field :status %>
+   <div class="form-group">
+  　 <%= f.label :status, 'ステータス' %>
+  　 <%= f.text_field :status, class: 'form-control' %>
+   </div>
   
-  <%= f.label :content, 'メッセージ' %>
-  <%= f.text_field :content %>
+   <div class="form-group">
+　   <%= f.label :content, 'メッセージ' %>
+  　 <%= f.text_field :content, class: 'form-control' %>
+   </div>
 
-  <%= f.submit '投稿' %>
-<% end %>
+   <%= f.submit '投稿' %>
+   <% end %>
+  </div>
+</div>
