--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,19 @@
-<h1>id: <%= @task.id %> のタスク詳細ページ</h1>
+<h1>id = <%= @task.id %> のメッセージ詳細ページ</h1>
 
-<p>ステータス: <%= @task.status %></p>
-<p><%= @task.content %></p> 
+<table class="table table-bordered">
+  <tr>
+    <th>id</th>
+    <td><%= @task.id %></td>
+  </tr>
+  <tr>
+    <th>タイトル</th>
+    <td><%= @task.status %></td>
+  </tr>
+  <tr>
+    <th>メッセージ</th>
+    <td><%= @task.content %></td>
+  </tr>
+</table>
 
-<%= link_to '一覧に戻る', tasks_path %>
-<%= link_to 'このメッセージを編集する', edit_task_path(@task) %>
-<%= link_to 'このメッセージを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %>
+<%= link_to 'このメッセージを編集する', edit_task_path(@task), class: 'btn btn-default' %>
+<%= link_to 'このメッセージを削除する', @task, method: :delete, data: { confirm: '本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
